[package]
name = "jjar"
version = "0.1.0"
authors = ["Jack Arthur Harrhy <me@jackharrhy.com>"]
edition = "2018"

keywords = [ "cli", "tool", "json" ]
description = "pack up json in a jar"
repository = "https://github.com/jackharrhy/jjar"

readme = "README.md"
license = "GPL-3.0-only"

[badges]
circle-ci = { repository = "jackharrhy/jjar", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
